glass_engine --live-editor option to edit in place

--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_form.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_form.html.erb
@@ -1,5 +1,4 @@
 <%%= render 'refinery/<%= namespacing.underscore %>/admin/submenu' %>
-
 <%
   image_attributes = []
   attributes.each_with_index do |attribute, index|
@@ -8,6 +7,23 @@
     end
   end
 -%>
+
+<%
+  delete_title = (title = attributes.detect { |a| a.type.to_s == "string" }).present? ? ", :title => @#{singular_name}.#{title.name}" : ''
+-%>
+<% form_actions = <<-ENDHTML
+<%= render '/refinery/admin/form_actions', :f => f, #{':sidebar => true,' if include_live_editor? }
+                 :continue_editing => false,
+                 :delete_title => t('delete', :scope => 'refinery.#{namespacing.underscore}.admin.#{plural_name}.#{singular_name}'),
+                 :delete_confirmation => t('message', :scope => 'refinery.admin.delete'#{delete_title}) -%%>
+ENDHTML
+-%>
+<% if include_live_editor? -%>
+<%% content_for :admin_page_preview do %>
+  <%%= render template: 'refinery/<%= namespacing.underscore %>/<%= plural_name %>/show' %>
+<%% end %>
+<%% content_for :admin_sidebar do %>
+<% end -%>
 <div class="row">
   <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
 
@@ -17,6 +33,9 @@
                   :object => @<%= singular_name %>,
                   :include_object_name => true %>
 
+<% if include_live_editor? -%>
+      <%= form_actions %>
+<% end -%>
 <% if localized? -%>
         <%%= render '/refinery/admin/locale_picker',
                     :current_locale => Globalize.locale %>
@@ -41,21 +60,29 @@
                    :resource => @<%= singular_name %>.<%= attribute.name.gsub("_id", "") %> -%>
       </div>
 <% else -%>
+<% if include_live_editor? -%>
+      <%%= f.hidden_field :<%= attribute.name %> -%>
+<% else -%>
       <div class='form-group'>
         <%%= f.label :<%= attribute.name %> -%>
         <%%= f.<%= attribute.field_type -%> :<%= attribute.name -%>, :class => 'form-control'<%= ", :checked => @#{singular_name}[:#{attribute.name}]" if attribute.field_type == :check_box %> -%>
       </div>
+<% end -%>
 
+<% end # switch attribute type -%>
+<% end # attributes.each -%>
+<% if !include_live_editor? -%>
+      <%= form_actions %>
 <% end -%>
-<% end -%>
-      <%%= render '/refinery/admin/form_actions', :f => f,
-                 :continue_editing => false,
-                 :delete_title => t('delete', :scope => 'refinery.<%= namespacing.underscore %>.admin.<%= plural_name %>.<%= singular_name %>'),
-                 :delete_confirmation => t('message', :scope => 'refinery.admin.delete'<% if (title = attributes.detect { |a| a.type.to_s == "string" }).present? %>, :title => @<%= singular_name %>.<%= title.name %><% end %>) -%>
-    <%% end -%>
+    <%% end # form_for -%>
 
   </div>
 </div>
+
+<% if include_live_editor? -%>
+  <%%= render partial: '/glass/html_editing_assets' %>
+<%% end # content_for :admin_sidebar %>
+<% end -%>
 
 <% if image_attributes.any? %>
   <%%= render 'refinery/admin/images/form',
