--- a/app/assets/stylesheets/glass/partials/components/_icon-styles.scss
+++ b/app/assets/stylesheets/glass/partials/components/_icon-styles.scss
@@ -19,6 +19,7 @@ $gcicon-css-prefix: gcicon !default;
   display: inline-block;
   font-family: "refinery-glass";
   line-height: 1;
+  vertical-align: middle;
 }
 
 [data-icon]:before {
