--- a/app/views/refinery/admin/users/update_password.html.erb
+++ b/app/views/refinery/admin/users/update_password.html.erb
@@ -1,3 +1,4 @@
+<p class="lead-sm">Please choose a password.</p>
 <%= form_for [refinery, :admin, @user] do |f| %>
   <%= render '/refinery/admin/error_messages',
              :object => @user,
