--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -47,10 +47,12 @@ body{
       display: none;
     }
     .sidebar-top-nav{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 260px;
+      .site-name{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 260px;
+      }
       .gcicon-glass-canvas{
         display: inline !important;
         visibility: visible !important;
@@ -67,19 +69,23 @@ body{
   padding: 0;
   .sidebar-top-nav{
     position: fixed;
-    text-align: right;
-    background: $grey-1;
-    padding: 18px 15px;
     z-index: 10000;
-    top: 0;
-    width: 100%;
+    top: 0;    
     white-space: nowrap;
-    a{
-      color: $grey-6;
-      font-size: 21px;
-      font-weight: 600;
-      &:hover{
-        color: $primary-dark;
+    width: 100%;
+    overflow: hidden;
+    .site-name{
+      text-align: right;
+      background: $grey-1;
+      padding: 18px 15px;
+      width: 100%;
+      a{
+        color: $grey-6;
+        font-size: 21px;
+        font-weight: 600;
+        &:hover{
+          color: $primary-dark;
+        }
       }
     }
   }
@@ -100,6 +106,10 @@ body{
     &:hover{
       background: $primary-hover;
       color: $white;
+    }
+    .gcicon{
+      top: 3px;
+      left: 3px;
     }
   }
   #sidebar-left-inner{
@@ -550,8 +560,9 @@ body{
   
   .dropdown{
     margin: 0 15x;
-    &:hover{
+    &:hover, &:focus{
       z-index: 1000;
+      outline: none;
       .btn{
         z-index: 1005;
       }
@@ -571,6 +582,7 @@ body{
     display: block;
     visibility: hidden;
     opacity: 0;
+    min-width: 100%;
     li{
       &:first-child{
         border-top: 1px solid $grey-1;
