--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -276,6 +276,14 @@ body{
               }
             }
           }
+          .draft{
+            label{
+              padding-left: 25px;
+              input[type="checkbox"]{
+                margin-left: -25px;
+              }
+            }
+          }
         }
         .child-toggle{
           margin-right: 10px;
@@ -614,57 +622,59 @@ body{
   }
 }
 
-.collapse-toggle{
-  display: block;
-  width: 100%;
-  padding: 0 15px;
-  background: $white;
-  border: 1px solid $grey-3;
-  &:focus{
-    border: 1px solid $primary-hover !important;
-    h4{
-      color: $primary-hover;
+.form-collapse{
+  .collapse-toggle{
+    display: block;
+    width: 100%;
+    padding: 0 15px;
+    background: $white;
+    border: 1px solid $grey-3;
+    &:focus{
+      border: 1px solid $primary-hover !important;
+      h4{
+        color: $primary-hover;
+      }
+      .gcicon{
+        color: $primary-hover;
+      }
     }
-    .gcicon{
-      color: $primary-hover;
+    &:active{
+      @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0px 0px 6px 0px rgba($primary-color,0.3));
     }
-  }
-  &:active{
-    @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0px 0px 6px 0px rgba($primary-color,0.3));
-  }
-  &.collapsed{
+    &.collapsed{
+      .gcicon-checked{
+        display: none;
+      }
+      .gcicon-unchecked{
+        display: flex;
+      }
+    }
+    &:hover{
+      border-color: $primary-hover;
+      h4{
+        color: $primary-hover;
+        transition: .2s ease-out;
+      }
+      .gcicon{
+        color: $primary-hover;
+        transition: .2s ease-out;
+      }
+    }
     .gcicon-checked{
-      display: none;
-    }
-    .gcicon-unchecked{
       display: flex;
     }
-  }
-  &:hover{
-    border-color: $primary-hover;
-    h4{
-      color: $primary-hover;
-      transition: .2s ease-out;
+    .gcicon-unchecked{
+      display: none;
     }
     .gcicon{
-      color: $primary-hover;
-      transition: .2s ease-out;
+      color: $grey-6;
     }
-  }
-  .gcicon-checked{
-    display: flex;
-  }
-  .gcicon-unchecked{
-    display: none;
-  }
-  .gcicon{
-    color: $grey-6;
-  }
-  .collapse-heading{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+    .collapse-heading{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+    }
   }
 }
 
