FIX: live editor - empty paragraph
 - Give empty <p> height to click on
 - New empty <p> selected as new module

--- a/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -12,6 +12,10 @@
   position: absolute;
 }
 
+[contenteditable=true] p.empty{
+  min-height: 20px;
+}
+
 [contenteditable=true]{
   outline: none;
   border-color: $primary-fade !important;
