--- a/app/views/refinery/pages/partials/_page_group.html.erb
+++ b/app/views/refinery/pages/partials/_page_group.html.erb
@@ -21,7 +21,7 @@
           </div>    	   
     	  </div>
     	  <div class="col-sm-8 col-md-9">
-          <h1 class="glass-edit" data-glass-options='{"form_id": "page_title"}' placeholder="Title"><%= @page.title %></h1>
+          <h1 class="glass-edit" data-glass-options='{"form_id": "page_title"}' glass-placeholder="Title"><%= @page.title %></h1>
           <%= render partial: '/glass/page_content' %>
           <%= yield :extra_page_content %>
     	  </div>
