--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -83,6 +83,7 @@ body{
         color: $grey-6;
         font-size: 21px;
         font-weight: 600;
+        line-height: 20px;
         &:hover{
           color: $primary-dark;
         }
