Allow custom class on body (content_for)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <%= render partial: '/glass/head',        locals: {admin: false} %>
     <%= render partial: '/glass/stylesheets', locals: {admin: false} %>
   </head>
-  <body>
+  <body class="<%= yield :body_class %>">
     <%= render partial: '/glass/body',        locals: {admin: false} %>
     <%= render partial: '/glass/javascripts', locals: {admin: false} %>
   </body>
