--- a/app/assets/stylesheets/canvas/config/_base-variables.scss
+++ b/app/assets/stylesheets/canvas/config/_base-variables.scss
@@ -22,7 +22,7 @@ $grey-7: #303030;
 $grey-8: #2c2c2c;
 $grey-9: #1f1f1f;
 $beige: #e1dcd9;
-$brown: #6c655e;
+$brown: #8c8987;
 $red: #a94442;
 $red-fade: #bf4d4b;
 $green: #5bc890;
