--- a/app/views/glass/_body.html.erb
+++ b/app/views/glass/_body.html.erb
@@ -12,7 +12,7 @@
       <%= yield %>
     <% end %>
   </section>
-  <footer>
+  <footer class="footer">
     <%= render '/refinery/footer' -%>
   </footer>
 </div>
