default email updated for confirmable. user admin controller decorator updated to set invitee and inviting user name values. User model decorator now has "name" method

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -641,9 +641,9 @@
                             <tbody>
                             <tr>
                               <td valign="top" class="mcnTextContent" style="padding-top:20px; padding-right: 30px; padding-bottom: 45px; padding-left: 30px;">
-                                <p><%= I18n.t("devise.mailer.invitation_instructions.hello", email: @email) %>!</p>
+                                <p>Hello <%= @resource[:invitee_name].present? ? @resource[:invitee_name] : @email %>!</p>
 
-                                <p>Someone has invited you to sign up for lifecollective.io:</p>
+                                <p><%=@resource[:inviting_user_name].present? ? @resource[:inviting_user_name] : 'Someone' %> has invited you to sign up for an account on a website:</p>
 
                                 <p><%= link_to 'Activate your account here', "#{Rails.configuration.devise[:invite_url]}?cf=#{@token}" %></p>
 
