--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -117,9 +117,11 @@ body{
     top: 65px;
     height: calc(100% - 110px);
     /* Hide scrollbar in chrome. */
+/*
     &::-webkit-scrollbar {
       display: none;
     }
+*/
     overflow-y: auto;
     overflow-x: hidden;
     padding-bottom: 15px;
