alert-sticky styling added and launch-org js added to the backend manifest

--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -685,6 +685,13 @@ body{
   padding: 30px 0;
 }
 
+.alert-sticky {
+	position: fixed;
+	top: 0;
+	right: 0;
+	z-index: 99;
+}
+
 @media (max-width: 767px) {
   .contextual-menu {
     flex-wrap: wrap;
