--- a/app/views/glass/_html_editing_assets.html.erb
+++ b/app/views/glass/_html_editing_assets.html.erb
@@ -3,6 +3,7 @@
   <div id="glass-choose-module" class="new-module media-chooser clear glass-control" contenteditable=false>
     <a href="" id="glass-choose-module-img" class="circle-icon media-type"><i class="gcicon gcicon-photo bump-down"></i></a>
     <a href="" id="glass-choose-module-vid" class="circle-icon media-type"><i class="gcicon gcicon-film"></i></a>
+    <a href="" id="glass-choose-custom"     class="circle-icon media-type">&lt;</a>
   </div>
   <div id="glass-module-settings-vid" class="new-module media-chooser clear glass-control" contenteditable=false>
     <form role="form">
@@ -22,6 +23,12 @@
     <div class="video-wrapper">
       <iframe data-video-link="" src="" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" scrolling="no" hspace="0">
       </iframe>
+    </div>
+  </div>
+
+  <div id="glass-module-custom-html" class="glass-no-edit" contenteditable=false>
+    <div class="whatever-you-want-here">
+      <p>Change this to custom html</p>
     </div>
   </div>
 </div>
