--- a/app/views/refinery/admin/users/update_password.html.erb
+++ b/app/views/refinery/admin/users/update_password.html.erb
@@ -1,4 +1,13 @@
-<p class="lead-sm">Please choose a password.</p>
+<h1>getting to know you!</h1>
+<p>
+  We’re so glad you’ve decided to join the movement of Right to Life organizations across Canada!
+  LifeCollective.io is a dynamic tool thal will allow us to share content and strategies with each other in order to make a greater and longer lasting impact in our communities. 
+</p>
+<p>
+  In order to start sharing content among various groups, we need you to create your personal account page (we’ll get to your organization’s account next).
+  This is the account that you will use in order to log in to the Content Management System (CMS). 
+</p>
+
 <%= form_for [refinery, :admin, @user] do |f| %>
   <%= render '/refinery/admin/error_messages',
              :object => @user,
