--- a/app/assets/stylesheets/glass/partials/components/_images.scss
+++ b/app/assets/stylesheets/glass/partials/components/_images.scss
@@ -3,9 +3,9 @@
   right: -1200px;
 }
 
-.upload { overflow:hidden; }
+.upload-preview-container { overflow:hidden; }
 
-.upload .file-preview {
+.upload-preview-container .file-preview {
   margin-top: 15px;
   display: inline-block;
   margin-right: 15px;
@@ -17,8 +17,7 @@
   float: left;
 }
 
-#progress-box {
-  padding: 1px;
+.progress-box {
   display: none;
   text-align:left;
   position: absolute;
@@ -26,18 +25,18 @@
   bottom: 10px;
   width: 270px;
   left: 15px;
+	.status-text {
+		top: 2px;
+		left: 50%;
+		margin-left: -15px;
+		width: 50px;
+		text-align: center;
+		position: absolute;
+		color: #000000;
+	}
 }
-#progress-bar {
-  height: 20px;
+.progress-bar {
   display: block;
   width: 1%;
 }
-#status-text {
-  top: 2px;
-  left: 50%;
-  margin-left: -15px;
-  width: 50px;
-  text-align: center;
-  position: absolute;
-  color: #000000;
-}
+
