image upload preview styling and js updated.
Image preview can set background-image url or image src for display in show view now.
Image preview container buttons display in the top right of preview image.

--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -717,3 +717,15 @@ body{
     }
   }
 }
+
+.editable-image-container {
+	.upload-preview-container {
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 100%;
+		text-align: right;
+		padding: 5px 15px;
+		z-index: 999;
+	}
+}
