--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1203,5 +1203,5 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
 }
 
 .pseudo-hidden-field, .image-id-field {
-	// opacity: 0;
+	opacity: 0;
 }
