--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -717,3 +717,16 @@ body{
     }
   }
 }
+
+.delete-content-btn {
+	position: absolute;
+	top: 15px;
+	right: 15px;
+	z-index: 99;
+	background: rgba(0,0,0,0.6);
+	&.circle-icon {
+		color: $primary-color;
+		border-color: $primary-color;
+	}
+
+}
