inline-block selector added

--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1205,3 +1205,7 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
 .pseudo-hidden-field, .image-id-field {
 	opacity: 0;
 }
+
+.inline-block {
+	display: inline-block;
+}
