--- a/app/views/refinery/admin/pages/_form.html.erb
+++ b/app/views/refinery/admin/pages/_form.html.erb
@@ -1,43 +1,47 @@
-<%= form_for [refinery, :admin, @page],
-             :url => (refinery.admin_page_path(@page.nested_url) if @page.persisted?) do |f| %>
+<div class="row">
+  <div class="col-sm-10 col-sm-offset-1">
+    <%= form_for [refinery, :admin, @page],
+                 :url => (refinery.admin_page_path(@page.nested_url) if @page.persisted?) do |f| %>
 
-  <%= render '/refinery/admin/error_messages', :object => @page, :include_object_name => true %>
+      <%= render '/refinery/admin/error_messages', :object => @page, :include_object_name => true %>
 
-  <%= render '/refinery/admin/locale_picker', :current_locale => Globalize.locale %>
+      <%= render '/refinery/admin/form_actions', :f => f, :sidebar => true,
+                 :continue_editing => true,
+                 :delete_title => t('delete', :scope => 'refinery.admin.pages'),
+                 :delete_confirmation => t('message', :scope => 'refinery.admin.delete', :title => @page.title),
+                 :before_cancel_button => submit_tag(
+                   t('.preview'),
+                   :id => 'preview-button',
+                   :title => 'Preview page',
+                   :name => nil,
+                   :class => "wymupdate button",
+                   :tooltip => t('.preview_changes')
+                 ),
+                 :cancel_url => refinery.admin_pages_path %>
 
-  <%= f.hidden_field :title %>
-  <%= render 'form_fields_after_title', :f => f %>
+      <%= render '/refinery/admin/locale_picker', :current_locale => Globalize.locale %>
 
-  <%#= render 'form_page_parts', :f => f %>
-  <% part_index = -1 %>
-  <%= f.fields_for :parts do |p| %>
-    <%= render 'page_part_field',
-               :part => p.object,
-               :part_index => (part_index += 1),
-               :new_part => @page.new_record? -%>
-  <% end %>
+      <%= f.hidden_field :title %>
+      <%= render 'form_fields_after_title', :f => f %>
 
-  <%= render 'form_advanced_options', :f => f %>
+      <%#= render 'form_page_parts', :f => f %>
+      <% part_index = -1 %>
+      <%= f.fields_for :parts do |p| %>
+        <%= render 'page_part_field',
+                   :part => p.object,
+                   :part_index => (part_index += 1),
+                   :new_part => @page.new_record? -%>
+      <% end %>
 
-  <%= render '/refinery/admin/form_actions', :f => f,
-             :continue_editing => true,
-             :delete_title => t('delete', :scope => 'refinery.admin.pages'),
-             :delete_confirmation => t('message', :scope => 'refinery.admin.delete', :title => @page.title),
-             :before_cancel_button => submit_tag(
-               t('.preview'),
-               :id => 'preview-button',
-               :title => 'Preview page',
-               :name => nil,
-               :class => "wymupdate button",
-               :tooltip => t('.preview_changes')
-             ),
-             :cancel_url => refinery.admin_pages_path %>
+      <%= render 'form_advanced_options', :f => f %>
 
-  <%= render 'form_new_page_parts', :f => f if Refinery::Pages.new_page_parts %>
-<% end %>
+      <%= render 'form_new_page_parts', :f => f if Refinery::Pages.new_page_parts %>
+    <% end %>
 
-<%= render '/glass/html_editing_assets' %>
-<%= render 'form_outside_main_form' %>
+    <%= render '/glass/html_editing_assets' %>
+    <%= render 'form_outside_main_form' %>
+  </div>
+</div>
 
 <% content_for :javascripts do %>
   <script>
