styling added for bootstrap styled file upload

--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1209,3 +1209,24 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
 .inline-block {
 	display: inline-block;
 }
+
+.btn-file {
+	position: relative;
+	overflow: hidden;
+	padding-top: 8px !important;
+	padding-bottom: 9px !important;
+}
+.btn-file input[type=file] {
+	position: absolute;
+	top: 0;
+	right: 0;
+	min-width: 100%;
+	min-height: 100%;
+	font-size: 100px;
+	text-align: right;
+	opacity: 0;
+	outline: none;
+	background: white;
+	cursor: inherit;
+	display: block;
+}
