included file-upload js and some semantic ui elements

--- a/app/assets/stylesheets/glass/_manifest-back-and-frontend.scss
+++ b/app/assets/stylesheets/glass/_manifest-back-and-frontend.scss
@@ -58,6 +58,8 @@
 @import "canvas/bootstrap/utilities";
 @import "canvas/bootstrap/responsive-utilities";
 
+// SEMANTIC-UI: Components
+@import "canvas/semantic-ui/popup";
 // Base
 @import "canvas/config/base";
 
