--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1204,6 +1204,8 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
 
 .pseudo-hidden-field, .image-id-field {
 	opacity: 0;
+	height: 0px;
+	width: 0px;
 }
 
 .inline-block {
