moved index, modal, sidebar and transition into canvas and added semantic-ui scss includes

--- a/app/assets/stylesheets/glass/_manifest-back-and-frontend.scss
+++ b/app/assets/stylesheets/glass/_manifest-back-and-frontend.scss
@@ -60,6 +60,12 @@
 
 // SEMANTIC-UI: Components
 @import "canvas/semantic-ui/popup";
+@import "canvas/semantic-ui/modal";
+@import "canvas/semantic-ui/sidebar";
+@import "canvas/semantic-ui/dimmer";
+@import "canvas/semantic-ui/transition";
+@import "canvas/semantic-ui/loader";
+@import "canvas/semantic-ui/button";
 // Base
 @import "canvas/config/base";
 
