default font size for semantic ui modals changed

--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1259,3 +1259,7 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
 	cursor: inherit;
 	display: block;
 }
+
+.ui.modal > .content {
+	font-size: $font-size-base !important
+}
