users are searchable and per_page changed from 50 to 15

--- a/app/views/refinery/admin/users/_users.html.erb
+++ b/app/views/refinery/admin/users/_users.html.erb
@@ -1,4 +1,4 @@
-<%= will_paginate @users %>
-<ul class="list-unstyled">
+<%= will_paginate @users if Refinery::Admin::UsersController.pageable? %>
+<ul id='sortable_list' class='list-unstyled'>
   <%= render :partial => 'user', :collection => @users %>
 </ul>
