--- a/app/views/refinery/admin/glass/_form_actions.html.erb
+++ b/app/views/refinery/admin/glass/_form_actions.html.erb
@@ -1,9 +1,12 @@
 <div class="deliver row">
   <button class="btn btn-success fluid-width save-page" type="submit"><i class="gcicon gcicon-save"></i> <span>Save</span></button>
   <% unless delete_url.nil? %>
-    <%=
-        ("<button class='btn btn-primary fluid-width delete delete-model'" +
-          "data-url='#{delete_url}' data-redirect-url='#{after_delete_url}'" +
-          "data-text='#{confirm_text}'><i class='gcicon gcicon-trash'></i> <span>Delete</span></button>").html_safe %>
+        <%= render 'refinery/admin/glass/delete_button',
+                   css_class: defined?(css_class) ? css_class : '',
+                   delete_url: delete_url,
+                   after_delete_url: after_delete_url,
+                   confirm_text: confirm_text,
+                   delete_btn_text: delete_btn_text
+        -%>
   <% end %>
 </div>
